force-app/main/default/objects/Region__c/fields/Access_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Access_Contact_Email__c</fullName>
    <description>Entera email for a specific region</description>
    <inlineHelpText>Entera email for a specific region</inlineHelpText>
    <label>Access Contact Email</label>
    <type>Email</type>
</CustomField>