force-app/main/default/objects/Region__c/fields/Metro_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Metro_Area_Code__c</fullName>
    <label>Metro Area Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>