force-app/main/default/objects/Region__c/fields/Metro_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Metro_Area_Name__c</fullName>
    <label>Metro Area Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>