force-app/main/default/objects/Region__c/fields/Repair_Estimator__c.field-meta.xml
<CustomField>
    <fullName>Repair_Estimator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Estimator and owner of Inspection record based on region</description>
    <label>Repair Estimator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Region_Repair_Estimator</relationshipName>
    <type>Lookup</type>
</CustomField>