force-app/main/default/objects/Region__c/fields/Repair_Manager__c.field-meta.xml
<CustomField>
    <fullName>Repair_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Repair Manager is the person for approval if the HHM bid recommendation goes above a certain threshold.</description>
    <inlineHelpText>Repair Manager is the person for approval if the HHM bid recommendation goes above a certain threshold.</inlineHelpText>
    <label>Repair Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Region_repair_manager</relationshipName>
    <type>Lookup</type>
</CustomField>