force-app/main/default/objects/Region__c/fields/Transaction_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Region3</relationshipName>
    <type>Lookup</type>
</CustomField>